# ViMax-zechy

./: .dockerignore  .gitignore  Dockerfile  README_ZH.md  TODO  cloudbuild.yaml  main_idea2video.py  main_script2video.py  pyproject.toml  readme.md  server.py
agents/: __init__.py  best_image_selector.py  camera_image_generator.py  character_extractor.py  character_portraits_generator.py  event_extractor.py  global_information_planner.py  novel_compressor.py  reference_image_selector.py  scene_extractor.py  screenwriter.py  script_enhancer.py  script_planner.py  storyboard_artist.py
configs/: idea2video.yaml  idea2video_minimax.yaml  script2video.yaml  script2video_minimax.yaml
interfaces/: __init__.py  camera.py  character.py  environment.py  event.py  frame.py  image_output.py  scene.py  shot_description.py  video_output.py
pipelines/: idea2video_pipeline.py  idea2video_pipeline_deprecated.py  novel2movie_pipeline.py  script2video_pipeline.py
tests/: test_minimax_integration.py  test_provider_presets.py
tools/: __init__.py  image_generator_doubao_seedream_yunwu_api.py  image_generator_nanobanana_google_api.py  image_generator_nanobanana_yunwu_api.py  protocols.py  render_backend.py  reranker_bge_silicon_api.py  video_generator_doubao_seedance_yunwu_api.py  video_generator_veo_google_api.py  video_generator_veo_yunwu_api.py
utils/: image.py  provider_presets.py  rate_limiter.py  retry.py  timer.py  video.py
